/******************************************************************************
 * Copyright (c) 2016 TypeFox and others.
 * 
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0,
 * or the Eclipse Distribution License v. 1.0 which is available at
 * http://www.eclipse.org/org/documents/edl-v10.php.
 * 
 * SPDX-License-Identifier: EPL-2.0 OR BSD-3-Clause
 ******************************************************************************/

ext.title = 'LSP4J'
description = 'Java bindings for the Language Server Protocol'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
	api project(":org.eclipse.lsp4j.generator")
	api project(":org.eclipse.lsp4j.jsonrpc")
	testImplementation "junit:junit:$versions.junit"
}

jar {
	from sourceSets.main.allJava
}

jar.bnd (
	'Import-Package': "com.google.common.*;version=\"$versions.guava\",com.google.gson.*;version=\"$versions.gson\",*"
)
